Series/Intermediate/Sessions/Session-019_InvocableMethods_06/objects/CommissionTier__mdt/fields/MaxYears__c.field-meta.xml
<CustomField>
    <fullName>MaxYears__c</fullName>
    <label>Max Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>