Series/Intermediate/Sessions/Session-019_InvocableMethods_06/objects/CommissionTier__mdt/fields/MinYears__c.field-meta.xml
<CustomField>
    <fullName>MinYears__c</fullName>
    <label>Min Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>