Series/Intermediate/Sessions/Session-019_InvocableMethods_06/objects/CommissionTier__mdt/fields/RatePercent__c.field-meta.xml
<CustomField>
    <fullName>RatePercent__c</fullName>
    <label>Rate Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>